# python-frame-by-frame-h264

./: Cargo.toml  README.md  example.py  pyproject.toml
src/: decoder.rs  encoder.rs  lib.rs
tests/: test_encoder.py
