[package]
name = "python-frame-by-frame-h264"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "frame_by_frame_h264"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module"] }
openh264 = "0.6.6"
openh264-sys2 = "0.6.6"
numpy = "0.23.0"
